styles(dashboard.menubar): align "share" to right, and mobile fixes

--- a/src/dealDashboard/dealMenubar/dealMenubar.scss
+++ b/src/dealDashboard/dealMenubar/dealMenubar.scss
@@ -1,19 +1,26 @@
 @import "src/resources/elements/primeDesignSystem/variables";
 
 deal-menubar {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  align-items: center;
+  display: flex;
   justify-content: end;
-  grid-column-gap: 10px;
-  grid-row-gap: 20px;
 
-  i.fas {
-    font-size: 20px;
+  .dealActionButtons {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    justify-content: end;
+    grid-column-gap: 10px;
+    grid-row-gap: 20px;
+
+    margin-left: 30px;
   }
 
   .rateDeal {
     margin-right: 80px;
+  }
+
+  i.fas {
+    font-size: 20px;
   }
 
   .shareButton {
@@ -21,16 +28,21 @@ deal-menubar {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-right: 30px;
     gap: 10px;
   }
+}
 
+@media screen and (max-width: 700px) {
+  deal-menubar {
+    flex-direction: column;
 
-  @media screen and (max-width: 700px) {
-    grid-template-columns: auto auto;
-    justify-content: center;
+    .dealActionButtons {
+      justify-content: center;
+      margin-left: unset;
+    }
+
     .shareButton {
-      grid-column: 1/ span 2;
+      margin-bottom: 28px;
     }
   }
 }
